# src/configs/swagger.json
@@ -341,7 +341,7 @@
     "/rooms/": {
       "get": {
         "tags": [
-          "rooms"
+          "Rooms"
         ],
         "summary": "List Rooms",
         "description": "\r  You can send query with endpoint for search[], sort[], page and limit.\r  <ul> Examples:\r   <li>URL/?<b>search[field1]=value1&filter[field2]=value2</b></li>\r   <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>\r   <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>\r   <li>URL/?<b>page=2&limit=1</b></li>\r  </ul>\r  ",
@@ -365,7 +365,7 @@
       },
       "post": {
         "tags": [
-          "rooms"
+          "Rooms"
         ],
         "summary": "Create Room",
         "description": "",
@@ -389,7 +389,7 @@
     "/rooms/{id}": {
       "get": {
         "tags": [
-          "rooms"
+          "Rooms"
         ],
         "summary": "Get Single Room",
         "description": "",
@@ -502,9 +502,9 @@
       },
       "post": {
         "tags": [
-          "reservations"
+          "Reservations"
         ],
-        "summary": "Create reservation",
+        "summary": "Create Reservation",
         "description": "",
         "parameters": [
           {
@@ -512,33 +512,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "reservationname": {
-                  "type": "string",
-                  "example": "test"
-                },
-                "password": {
-                  "type": "string",
-                  "example": "1234"
-                },
-                "email": {
-                  "type": "string",
-                  "example": "test@site.com"
-                },
-                "isActive": {
-                  "type": "boolean",
-                  "example": true
-                },
-                "isStaff": {
-                  "type": "boolean",
-                  "example": false
-                },
-                "isAdmin": {
-                  "type": "boolean",
-                  "example": false
-                }
-              }
+              "$ref": "#/definitions/Reservation"
             }
           }
         ],
@@ -923,7 +897,7 @@
             }
           }
         },
-        "arrival_date": {
+        "arrivalDate": {
           "type": "object",
           "properties": {
             "type": {
@@ -935,7 +909,7 @@
             }
           }
         },
-        "departure_date": {
+        "departureDate": {
           "type": "object",
           "properties": {
             "type": {
